[gd_scene load_steps=6 format=3 uid="uid://b0ocqpn513x0r"]

[ext_resource type="Script" path="res://entity/weapon/laser.gd" id="1_dehlc"]

[sub_resource type="Curve" id="Curve_lwiyq"]
max_value = 40.0
_data = [Vector2(0.0268817, 16.7033), 0.0, 74.9451, 0, 0, Vector2(0.586021, 0), -36.6502, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_j8i2n"]
max_value = 2.0
_data = [Vector2(0.0537634, 2), 0.0, 0.0, 0, 0, Vector2(0.61828, 0.681319), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_awabd"]
colors = PackedColorArray(0, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uxt6m"]
gradient = SubResource("Gradient_awabd")
width = 6
height = 6
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Laser" type="Node2D"]
script = ExtResource("1_dehlc")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
position = Vector2(52, 0)
amount = 200
lifetime = 0.5
speed_scale = 2.0
lifetime_randomness = 1.0
direction = Vector2(-1, 0)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 100.0
damping_max = 40.0
damping_curve = SubResource("Curve_lwiyq")
scale_amount_min = 0.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_j8i2n")

[node name="LaserLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 52, 0)
width = 3.0
default_color = Color(1, 0, 0, 1)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(54, 0)
collision_mask = 4

[node name="IndicatorSprite" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_uxt6m")

[node name="BarrelLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 7, 0)
width = 4.0

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
